# family-manager-server

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: main.rs
api/src/routes/v1/: auth.rs  health.rs  mod.rs
application/: Cargo.toml
application/src/: error.rs
application/src/auth/: login.rs  mod.rs  register.rs
application/src/auth/permissions/: crud.rs
database/: Cargo.toml  README.md
database/src/: error.rs  lib.rs
database/src/migrations/: m001_create_users_table.rs  m002_create_permissions_table.rs  m003_create_roles_table.rs  m004_create_user_roles_table.rs  mod.rs
database/src/records/: mod.rs  permission.rs  role.rs  role_permission.rs  user.rs  user_role.rs
database/src/repositories/: mod.rs  permission.rs  role.rs  role_permission.rs  user.rs  user_role.rs
