[workspace]
members = ["api", "application", "database"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.44", features = ["full"] }
axum = { version = "0.8", features = ["multipart", "ws"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
argon2 = "0.5"
