[package]
name = "api"
version = "0.1.0"
edition = "2024"

[features]
default = []
production = []

[dependencies]
application = { path = "../application" }
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1.44", features = ["full"] }
dotenv = { version = "0.15" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"