[package]
name = "api"
version = "0.1.0"
edition = "2024"

[features]
default = []
production = []

[dependencies]
application = { path = "../application", features = ["axum"] }
database = { path = "../database" }
axum.workspace = true
tokio.workspace = true
dotenv.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true