[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
database = { path = "../database" }
serde = { version = "1.0" }
thiserror = "1.0"
argon2 = "0.5"
axum = { version = "0.8", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
axum = ["dep:axum", "dep:serde_json"]
