[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "json", "chrono"] }
thiserror = "2.0"
tracing = { version = "0.1" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0" }
